erDiagram
    USERS {
      STRING id PK "uuid"
      STRING username "unique"
      STRING email "unique"
      STRING hashed_password
    }
    GROUPS {
      STRING id PK "uuid"
      STRING name "unique"
    }
    USER_GROUPS {
      STRING user_id PK, FK "users.id"
      STRING group_id PK, FK "groups.id"
    }
    LEADERBOARD {
      STRING id PK "uuid"
      STRING username "snapshot"
      INTEGER score
      STRING game_mode "enum(GameMode)"
      DATETIME timestamp
    }

    USERS ||--o{ USER_GROUPS : "belongs to"
    GROUPS ||--o{ USER_GROUPS : "contains"
    USERS ||--o{ LEADERBOARD : "has (logical 1→many, stored as snapshot)"
